--- a/dataritywebapp/pom.xml
+++ b/dataritywebapp/pom.xml
@@ -122,6 +122,12 @@
 			<version>1.9.13</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
